# navigation

./: CMakeLists.txt  LICENSE  README.md  arm_build.cmake  navigation.cpp
.github/workflows/: cpp_linux_x86.yml
cmake/: FindIvy.cmake  NavigationConfig.cmake.in
include/Navigation/: GoToPointHolonomic.h  LinearControl.h  Parameters.h  PolarControl.h  PositionControlBase.h  PurePursuitControl.h  RotationControl.h
include/Navigation/Communication/: Ivy.h
include/Navigation/Geometry/: Point.h  Speed.h  Trajectory.h
src/: GoToPointHolonomic.cpp  LinearControl.cpp  PolarControl.cpp  PurePursuitControl.cpp  RotationControl.cpp
src/Communication/: Ivy.cpp
src/Geometry/: Point.cpp  Speed.cpp  Trajectory.cpp
test/: geometry_tests.cpp  navigation_tests.cpp
tests/: navigation.cpp
